--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
+    "spoiled": "^0.3.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
